[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/ActionSelector/PlayerExtra.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/robo/RoboExtra.gd" type="Script" id=2]
[ext_resource path="res://ui/8Way/8Way.tscn" type="PackedScene" id=3]
[ext_resource path="res://theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/XYPlot/XYPlot.tscn" type="PackedScene" id=5]

[node name="PlayerExtra" instance=ExtResource( 1 )]
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
margin_right = 52.0
margin_bottom = 360.0
alignment = 2

[node name="LOIC" parent="VBoxContainer" index="0" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 232.0
margin_bottom = 258.0
force_neutral_when_invisible = false
NW = false
N = false
NE = false
SW = false
S = false
SE = false

[node name="FlyDir" parent="VBoxContainer" index="1" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_top = 259.0
margin_bottom = 321.0
alignment = 1

[node name="FlyEnabled" type="CheckButton" parent="VBoxContainer" index="2"]
unique_name_in_owner = true
margin_top = 322.0
margin_right = 52.0
margin_bottom = 334.0
text = "Fly"

[node name="ArmorEnabled" type="CheckButton" parent="VBoxContainer" index="3"]
unique_name_in_owner = true
margin_top = 335.0
margin_right = 52.0
margin_bottom = 347.0
size_flags_vertical = 0
text = "Armor"

[node name="NadeActive" type="CheckButton" parent="VBoxContainer" index="4"]
unique_name_in_owner = true
margin_top = 348.0
margin_right = 52.0
margin_bottom = 360.0
size_flags_vertical = 0
text = "Bomb"

[node name="PullEnabled" type="CheckButton" parent="VBoxContainer" index="5"]
unique_name_in_owner = true
visible = false
margin_top = 348.0
margin_right = 52.0
margin_bottom = 360.0
size_flags_vertical = 0
text = "Pull"

[node name="DriveCancel" type="CheckButton" parent="VBoxContainer" index="6"]
unique_name_in_owner = true
visible = false
margin_top = 348.0
margin_right = 52.0
margin_bottom = 360.0
size_flags_vertical = 0
text = "Drive"

[node name="VBoxContainer2" type="VBoxContainer" parent="." index="1"]
margin_left = 53.0
margin_right = 53.0
margin_bottom = 360.0
alignment = 2

[node name="Bounce" parent="VBoxContainer2" index="0" instance=ExtResource( 5 )]
unique_name_in_owner = true
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 294.0
margin_bottom = 360.0

[connection signal="data_changed" from="VBoxContainer/FlyDir" to="." method="_on_FlyDir_data_changed"]
